# Othello

./: .gitignore  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  MainWindow.cpp  MainWindow.h  Othello.cpp  Othello.h  OthelloUI.h  README.md  main.cpp
AI/: AI.cpp  AI.h  Board.cpp  Board.h  LineChecker.cpp  LineChecker.h  Point.cpp  Point.h
